// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`spinner components tests LoadingIconContainer 1`] = `
<DocumentFragment>
  .c0 {
  z-index: 1;
  position: fixed;
  margin: 0;
  height: 100vh;
  background: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 985px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 img {
  margin-top: -60vh;
  width: 3rem;
  height: 3rem;
}

@media (max-width:1280px) {
  .c0 {
    width: 80vw;
  }
}

@media (max-width:1023px) {
  .c0 {
    width: 100vw;
    left: 0;
  }
}

<div
    class="c0"
  />
</DocumentFragment>
`;

exports[`spinner components tests LoadingIconPrevNextPageContainer 1`] = `
<DocumentFragment>
  .c0 {
  -webkit-flex: 100%;
  -ms-flex: 100%;
  flex: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 5rem;
  margin: 2rem 0;
}

.c0 img {
  width: 3rem;
  height: 3rem;
}

<div
    class="c0"
  />
</DocumentFragment>
`;
